Adding Student services Test and README